# Esp_SPIFFS_OTA_Demo

./: CMakeLists.txt  README.md  huge_app.csv  sdkconfig  sdkconfig.old  spiffsgen.py
data/: hello.txt
main/: CMakeLists.txt  spiffs_ota_demo.cpp
main/FileSystem/: FileSystem.cpp  FileSystem.h
